<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.employeeItem.EmployeeItemFragment">


    <ImageView
        android:id="@+id/iv_avatar"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintDimensionRatio="H, 1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars"/>

    <TextView
        android:id="@+id/tv_label_name"
        style="@style/label_text"
        android:text="@string/label_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_avatar" />

    <TextView
        android:id="@+id/tv_name"
        style="@style/label_def_text"
        android:text="@string/name_test"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_name" />

    <TextView
        android:id="@+id/tv_label_last_name"
        style="@style/label_text"
        android:text="@string/label_last_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name" />

    <TextView
        android:id="@+id/tv_last_name"
        style="@style/label_def_text"
        android:text="@string/name_test"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_label_last_name"/>

    <TextView
        android:id="@+id/tv_label_old"
        style="@style/label_text"
        android:text="@string/label_old"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_last_name"/>

    <TextView
        android:id="@+id/tv_old"
        style="@style/label_def_text"
        android:text="@string/test_old"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_label_old"/>

    <TextView
        android:id="@+id/tv_label_birthday"
        style="@style/label_text"
        android:text="@string/label_birthday"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_old"/>

    <TextView
        android:id="@+id/tv_birthday"
        style="@style/label_def_text"
        android:text="10.09.1989"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_label_birthday"/>

    <TextView
        android:id="@+id/tv_label_specialty"
        style="@style/label_text"
        android:text="@string/label_specialty"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_birthday"/>

    <TextView
        android:id="@+id/tv_specialty"
        style="@style/label_def_text"
        android:text="@string/test_sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_label_specialty"/>
</androidx.constraintlayout.widget.ConstraintLayout>